@@ -3,6 +3,7 @@
 	- cleaned up some tests
 	- added `encode_ascii` helper
 	- added git-ignored `tests/private` directory for non-public tests
+	- added an `encoder` argument to `get_metadata` for encoding values
 
 0.8.1
 	added 2 new properties to a computed MetadataParser object:
